--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,7 @@
 
 body{
     background-color: var(--background-color);
+    /* font-family: font-MonaSans-400; */
+    /* font-family: font-MonaSans-400; */
+    font-family: "Mona Sans", sans-serif;
 }
