--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,5 @@ body{
     background-color: var(--primary-color);
     /* font-family: font-MonaSans-400; */
     /* font-family: font-MonaSans-400; */
-    font-family: "Mona Sans", sans-serif;
+    font-family: "Outfit", sans-serif;
 }
